# Fiap-Datathon

./: .env  .gitignore  Dockerfile  README.md  README_DOCKER.md  candidatos_selecionados.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: candidatos_selecionados.md
src/logs/: performance_log.csv
src/recrut_ai/: Untitled-1.ipynb  app.py  app_reference.txt  crew.py  main.py  pyproject.toml  utils.py
src/recrut_ai/.streamlit/: config.toml
src/recrut_ai/config/: agents.yaml  tasks.yaml
src/recrut_ai/logs/: performance_log.csv
tests/: limpeza_docker.sh
