[project]
name = "recrut_ai"
version = "0.1.0"
description = "recrut_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
recrut_ai = "recrut_ai.main:run"
run_crew = "recrut_ai.main:run"
train = "recrut_ai.main:train"
replay = "recrut_ai.main:replay"
test = "recrut_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.poetry]
name = "recrut_ai"
version = "0.1.0"
packages = [
  { include = "recrut_ai", from = "src" }
]
